fix: Parse clipboard data as URL.